--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 id="title">FreeCodeCamp Survey Form</h1>
-            <p id="description">Thank you for taking the time to help us improve the platform</p>
+            <h1 id="title" class="initial">FreeCodeCamp Survey Form</h1>
+            <p id="description" class="initial">Thank you for taking the time to help us improve the platform</p>
         </header>
         <form id="survey-form" method="GET">
             <div class="form-questions">
                 <label id="name-label" for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                <input class="form-control" type="text" id="name" name="name" placeholder="Enter your name" required>
             </div>
             <div class="form-questions">
                 <label id="email-label" for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Enter your Email" required>
+                <input class="form-control" type="email" id="email" name="email" placeholder="Enter your Email"
+                    required>
             </div>
             <div class="form-questions">
-                <label id="number-label" for="number">Age <span>(optional)</span></label>
-                <input type="number" id="number" name="age" placeholder="Age" min="10" max="99">
+                <label id="number-label" for="number">Age <span class="check">(optional)</span></label>
+                <input class="form-control" type="number" id="number" name="age" placeholder="Age" min="10" max="99">
             </div>
             <div class="form-questions">
                 <p>Which option best describes your current role?</p>
-                <select id="dropdown" required>
+                <select id="dropdown" name="role" class="form-control" required>
                     <option selected="selected" disabled="disabled" value="Select current hole">Select current hole
                     </option>
                     <option value="student">Student</option>
@@ -42,13 +43,13 @@
             </div>
             <div class="form-questions">
                 <p>Would you recommend freeCodeCamp to a friend?</p>
-                <label><input type="radio" name="recommend" value="definitely">Definitely</label>
-                <label><input type="radio" name="recommend" value="maybe">Maybe</label>
-                <label><input type="radio" name="recommend" value="not-sure">Not Sure</label>
+                <label><input class="input-radio" type="radio" name="recommend" value="definitely">Definitely</label>
+                <label><input class="input-radio" type="radio" name="recommend" value="maybe">Maybe</label>
+                <label><input class="input-radio" type="radio" name="recommend" value="not-sure">Not Sure</label>
             </div>
             <div class="form-questions">
                 <p>What is your favorite feature of freeCodeCamp?</p>
-                <select id="feature" required>
+                <select id="feature" name="features" class="form-control" required>
                     <option selected="selected" disabled="disabled" value="Select-an-option">Select an option</option>
                     <option value="challenges">challenges</option>
                     <option value="Projects">Projects</option>
@@ -57,25 +58,33 @@
                 </select>
             </div>
             <div class="form-questions">
-                <p>What would you like to see improved?<span>(Check all that apply)</span></p>
-                <label><input type="checkbox" name="prefer" value="Front-end Projects">Front-end Projects</label>
-                <label><input type="checkbox" name="prefer" value="Back-end Projects">Back-end Projects</label>
-                <label><input type="checkbox" name="prefer" value="Data Visualization">Data Visualization</label>
-                <label><input type="checkbox" name="prefer" value="Challenges">Challenges</label>
-                <label><input type="checkbox" name="prefer" value="Open Source Community">Open Source Community</label>
-                <label><input type="checkbox" name="prefer" value="Gitter help rooms">Gitter help rooms</label>
-                <label><input type="checkbox" name="prefer" value="Videos">Videos</label>
-                <label><input type="checkbox" name="prefer" value="City Meetups">City Meetups</label>
-                <label><input type="checkbox" name="prefer" value="Wiki">Wiki</label>
-                <label><input type="checkbox" name="prefer" value="Forum">Forum</label>
-                <label><input type="checkbox" name="prefer" value="Additional Courses">Additional Courses</label>
+                <p>What would you like to see improved?<span class="check">(Check all that apply)</span></p>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="Front-end Projects">Front-end
+                    Projects</label>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="Back-end Projects">Back-end
+                    Projects</label>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="Data Visualization">Data
+                    Visualization</label>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="Challenges">Challenges</label>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="Open Source Community">Open
+                    Source Community</label>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="Gitter help rooms">Gitter help
+                    rooms</label>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="Videos">Videos</label>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="City Meetups">City
+                    Meetups</label>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="Wiki">Wiki</label>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="Forum">Forum</label>
+                <label><input class="input-checkbox" type="checkbox" name="prefer" value="Additional Courses">Additional
+                    Courses</label>
             </div>
             <div class="form-questions">
                 <p>Any comments or suggestions?</p>
-                <textarea id="comments" name="comment" placeholder="Enter your comment here.."></textarea>
+                <textarea id="comments" name="comment" class="input-textarea"
+                    placeholder="Enter your comment here.."></textarea>
             </div>
             <div class="form-questions">
-                <button type="submit" id="submit">Submit</button>
+                <button type="submit" id="submit" class="submit-button">Submit</button>
             </div>
         </form>
     </div>
